# swiftpp

./: CHANGELOG.md  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  README.md
benchmark/scripts/: build_linux.py  build_script_helper.py
cmake/modules/: StandaloneOverlay.cmake  SwiftConfig.cmake.in  SwiftExternalBenchmarkBuild.cmake  SwiftSharedCMakeConfig.cmake  SwiftSource.cmake
docs/: Android.md  CompilerPerformance.md  DebuggingTheCompiler.rst  Driver.md  DriverParseableOutput.rst  Lexicon.rst  OptimizationTips.rst  RequestEvaluator.md  SIL.rst  StandardLibraryProgrammersManual.md  SwiftFormat.md  Testing.md  WindowsBuild.md  conf.py  libFuzzerIntegration.rst
docs/tools/: swift.pod
lib/: CMakeLists.txt
lib/AST/: Attr.cpp  AvailabilitySpec.cpp  CMakeLists.txt  DocComment.cpp  RawComment.cpp
lib/Basic/: FileTypes.cpp  OutputFileMap.cpp
lib/ClangImporter/: ClangImporter.cpp
lib/Driver/: Driver.cpp  FrontendUtil.cpp  ToolChains.cpp  UnixToolChains.cpp
lib/Frontend/: ArgsToFrontendInputsConverter.cpp  ArgsToFrontendOutputsConverter.cpp
lib/IDE/: CodeCompletion.cpp  CommentConversion.cpp  SwiftSourceDocInfo.cpp  SyntaxModel.cpp
lib/IRGen/: GenConstant.cpp  IRGenSIL.cpp
lib/Immediate/: REPL.cpp
lib/Index/: Index.cpp
lib/Parse/: Lexer.cpp
lib/PrintAsObjC/: PrintAsObjC.cpp
test/: lit.cfg
test/AutolinkExtract/: empty.swift  empty_archive.swift  import.swift  import_archive.swift
test/ClangImporter/: pch-bridging-header-serialized-diagnostics.swift  pch-bridging-header-unittest-ok.swift  (+2 more)
tools/: CMakeLists.txt
tools/driver/: CMakeLists.txt  driver.cpp
utils/: build-parser-lib  build-presets.ini  build-script  build-script-impl  build-toolchain  line-directive  process-stats-dir.py  run-test  scale-test  swift-autocomplete.bash  swift-bench.py  swift-mode.el  swift-project-settings.el
(+226 files in other folders)
